--- a/Werkcollege 7/Oefening 3/chat.html
+++ b/Werkcollege 7/Oefening 3/chat.html
@@ -4,6 +4,8 @@
       <meta charset="UTF-8">
       <title>Chat</title>
       <link href="css/style.css" rel="stylesheet" type="text/css">
+      <script src="../../JQuery/jquery-3.2.1.min.js"></script>
+      <script src="js/chatscript.js"></script>
   </head>
 
   <body>
